--- a/index.html
+++ b/index.html
@@ -347,28 +347,34 @@
         </div>
     </div>
 
-    <div class="alacarte-menu">
-        <h3>À La Carte & Large Orders</h3>
-        <div class="alacarte-grid">
-            <div class="alacarte-item">
-                <p><strong>Proteins:</strong> $16 per pound</p>
-                <small>Teriyaki Chicken or Thinly Sliced Beef</small>
-            </div>
-            <div class="alacarte-item">
-                <p><strong>Steamed Rice:</strong> $8 per quart</p>
-            </div>
-            <div class="alacarte-item">
-                <p><strong>Side Salads:</strong> $12 per half-tray</p>
-                <small>Serves 8-10 people</small>
-            </div>
-        </div>
-        <div class="delivery-box">
-            <p>🚚 <strong>Delivery & Logistics</strong></p>
-            <p>Delivery fees are calculated based on distance from our commissary kitchen.</p>
-            <p><small>Free local pickup may be available upon request.</small></p>
-        </div>
-        <p class="custom-note"><em>*Ideal for events of 15+ people. Contact us below for a custom quote.</em></p>
+   <h3 style="color: #1B4D3E; margin-bottom: 20px;">À La Carte & Large Orders</h3>
+
+<div class="menu-grid">
+    <div class="menu-item">
+        <h3>Proteins</h3>
+        <p><strong>$16 per pound</strong></p>
+        <p style="font-size: 0.9em; color: #666;">Teriyaki Chicken or Thinly Sliced Beef</p>
     </div>
+
+    <div class="menu-item">
+        <h3>Steamed Rice</h3>
+        <p><strong>$8 per quart</strong></p>
+        <p style="font-size: 0.9em; color: #666;">Serves 8-10 people</p>
+    </div>
+
+    <div class="menu-item">
+        <h3>Side Salads</h3>
+        <p><strong>$12 per half-tray</strong></p>
+        <p style="font-size: 0.9em; color: #666;">Choice of Asian Cabbage, Gochu Cucumber, or Mac Salad</p>
+    </div>
+</div>
+
+<div style="margin-top: 30px;">
+    <p><strong>🚚 Delivery & Logistics</strong></p>
+    <p>Delivery fees are calculated based on distance from our commissary kitchen. Free local pickup may be available upon request.</p>
+    <p><em>*Ideal for events of 15+ people. <a href="#contact" style="color: #1B4D3E; font-weight: bold;">Contact us</a> for a custom quote.</em></p>
+</div>
+       
 </section>
 <section id="contact" style="background-color: #f2f2f2; width: 100%; max-width: 100%; box-sizing: border-box;">
     <div style="max-width: 900px; margin: auto;">
