--- a/index.html
+++ b/index.html
@@ -369,10 +369,15 @@
     </div>
 </div>
 
-<div style="margin-top: 30px;">
-    <p><strong>🚚 Delivery & Logistics</strong></p>
-    <p>Delivery fees are calculated based on distance from our commissary kitchen. Free local pickup may be available upon request.</p>
-    <p><em>*Ideal for events of 15+ people. <a href="#contact" style="color: #1B4D3E; font-weight: bold;">Contact us</a> for a custom quote.</em></p>
+<div class="sauce-highlight" style="margin-top: 30px;">
+    <p style="margin-bottom: 5px;">🚚 <strong>Delivery & Logistics</strong></p>
+    <p style="font-weight: normal; font-size: 0.95em;">
+        Delivery fees are calculated based on distance from our commissary kitchen. 
+        Free local pickup may be available upon request.
+    </p>
+    <p style="font-style: italic; font-size: 0.9em; margin-top: 10px;">
+        *Ideal for events of 15+ people. <a href="#contact" style="color: #1B4D3E; font-weight: bold;">Contact us</a> for a custom quote.
+    </p>
 </div>
        
 </section>
@@ -427,10 +432,11 @@
         <button type="submit">Send Message</button>
     </form>
 
-    <div style="margin-top: 10px; text-align: center; width: 100%;">
-        <p style="margin: 5px 0;">📞 Phone: (801) 703-3233</p>
-        <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
+    <div class="sauce-highlight" style="margin-top: 20px; text-align: center;">
+        <span style="margin-right: 20px;">📞 <strong>Phone:</strong> (801) 703-3233</span>
+        <span>📧 <strong>Email:</strong> aloha@teriyakihale.com</span>
     </div>
+</section>
 <!-- ======= About Us Section ======= -->
 <section id="about" style="background-color: #FFF9E6; width: 100%; max-width: 100%; box-sizing: border-box;">
     <div style="max-width: 900px; margin: auto;">
