--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
             | 
             <a href="/#menu">View Menu</a>
             | 
-            <a href="/about">About Us</a>
+            <a href="/#about">About Us</a>
         </div>
     </div>
     
@@ -580,7 +580,7 @@
         <p>
             <a href="/">Home</a> | 
             <a href="/#menu">Menu</a> | 
-            <a href="/about">About</a> | 
+            <a href="/#about">About Us</a> | 
             <a href="/gallery.html">Gallery</a>
         </p>
         <p><small>&copy; 2025 Teriyaki Hale. All Rights Reserved.</small></p>
