--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <a href="#catering">Catering</a>
         <a href="#contact">Contact</a>
         <a href="#about">About Teriyaki Hale</a>
-        <a href="gallery.html">Gallery</a>
+        <a href="#gallery">Gallery</a>
     </nav>
 </header>
 
