--- a/index.html
+++ b/index.html
@@ -473,14 +473,16 @@
     </div>
 </section>
     <!-- Your green footer -->
-    <footer class="site-footer">
-        <p>
-            <a href="/">Home</a> | 
-            <a href="/#menu">Menu</a> | 
-            <a href="/#about">About Us</a> | 
-            <a href="/gallery.html">Gallery</a>
-        </p>
-        <p><small>&copy; 2025 Teriyaki Hale. All Rights Reserved.</small></p>
-    </footer>
+  <footer style="background-color: #1B4D3E; color: white; padding: 30px 20px; text-align: center;">
+    <p style="margin-bottom: 15px;">
+        <a href="/" style="color: white; text-decoration: none; margin: 0 10px;">Home</a> | 
+        <a href="#menu" style="color: white; text-decoration: none; margin: 0 10px;">Menu</a> | 
+        <a href="#about" style="color: white; text-decoration: none; margin: 0 10px;">About Us</a> | 
+        <a href="#gallery" style="color: white; text-decoration: none; margin: 0 10px;">Gallery</a>
+    </p>
+    <p style="margin: 0; font-size: 0.9em; opacity: 0.8;">
+        &copy; 2025 Teriyaki Hale. All Rights Reserved.
+    </p>
+</footer>
 </body>
 </html>
